# advent-of-code-2024

./: .gitignore  README.md
cpp/: .gitignore  README.md
cpp/day01/: CMakeLists.txt
cpp/day01/src/: lib.cxx  lib.hpp  main.cxx  part2.cxx
cpp/day02/: CMakeLists.txt
cpp/day02/src/: part1.cpp
haskell/: .gitignore
haskell/day01/: day01.cabal
haskell/day01/app/: Main.hs  Part02.hs
haskell/day02/: day02.cabal
haskell/day02/app/: Main.hs
haskell/day03/: day03.cabal
haskell/day03/app/: Lib.hs  Main.hs  Part2.hs
haskell/day04/: day04.cabal
haskell/day04/app/: Main.hs  Part2.hs
haskell/day04/src/Day04/: Grid.hs
haskell/day04/test/: Spec.hs
haskell/day05/: day05.cabal  requirement.md
haskell/day05/app/: Main.hs
haskell/day05/src/: Lib.hs
haskell/day05/test/: Spec.hs
haskell/day06/: LICENSE  day06.cabal
haskell/day06/app/: Main.hs
haskell/day06/src/: GuardPath.hs
haskell/day06/test/: GuardPathSpec.hs  Main.hs
rust/day01/src/: main.rs
rust/day02/src/: main.rs
rust/day04/src/: main.rs
