cabal-version:      3.12
name:               guard-path-prediction
version:            0.1.0.0
license:            MIT
author:             Your Name
synopsis:           Advent of Code Guard Path Prediction
category:           Game
build-type:         Simple

library
  exposed-modules:  GuardPath
  build-depends:    base ^>=4.16.4.0,
                    containers,
                    text,
                    parsec
  hs-source-dirs:   src

test-suite guard-path-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:    base,
                    guard-path-prediction,
                    hspec,
                    QuickCheck,
                    text,
                    containers
  other-modules:    GuardPathSpec
